fixes text alignment on mobile devices

--- a/index.css
+++ b/index.css
@@ -19,6 +19,7 @@ body{
     flex-direction:column;
     justify-content:center;
     align-items:center;
+    text-align:center;
     padding:0 20px;
 }
 
